--- a/docker-compose/services/backend.yml
+++ b/docker-compose/services/backend.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   backend:
-    image: blockscout/${DOCKER_REPO:-blockscout}:${DOCKER_TAG:-latest}
+    image: mrcodings/${DOCKER_REPO:-blockscout}:${DOCKER_TAG:-research}
     pull_policy: always
     restart: always
     stop_grace_period: 5m
